<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:id="@+id/icon_xscore"
            android:background="@color/defaultBackgroundColor"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="@+id/upgrade_xscore"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/upgrade_xscore"
            app:layout_constraintTop_toBottomOf="@+id/upgrade_xscore" app:srcCompat="@drawable/icon_xscore"/>
    <TextView
            android:text="LEVEL"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/level_xscore"
            android:fontFamily="@font/iceberg_regular"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:background="@color/defaultBackgroundColor"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/icon_xscore"
            app:layout_constraintEnd_toEndOf="@+id/icon_xscore"
            app:layout_constraintStart_toStartOf="@+id/icon_xscore"
            app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:layout_width="80dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/icon_bullet"
            android:id="@+id/icon_bullet"
            android:background="@color/defaultBackgroundColor"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="@+id/upgrade_bullet"
            app:layout_constraintStart_toStartOf="@+id/upgrade_bullet"
            app:layout_constraintTop_toBottomOf="@+id/upgrade_bullet"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="LEVEL"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/level_bullet"
            android:fontFamily="@font/iceberg_regular"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:background="@color/defaultBackgroundColor"
            app:layout_constraintEnd_toEndOf="@+id/icon_bullet"
            app:layout_constraintStart_toStartOf="@+id/icon_bullet"
            app:layout_constraintTop_toBottomOf="@+id/icon_bullet"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="LEVEL"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/level_health"
            android:fontFamily="@font/iceberg_regular"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:background="@color/defaultBackgroundColor"
            app:layout_constraintEnd_toEndOf="@+id/icon_health"
            app:layout_constraintStart_toStartOf="@+id/icon_health"
            app:layout_constraintTop_toBottomOf="@+id/icon_health"
            app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/spaceship_1_game"
            android:id="@+id/ship_image"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/upgrade_bullet"/>
    <TextView
            android:text="Max health"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/upgrade_health"
            tools:ignore="MissingConstraints"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:background="@color/defaultBackgroundColor"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/ship_image"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="200dp"
            android:fontFamily="@font/iceberg_regular"/>
    <TextView
            android:text="Bullet damage"
            android:layout_width="80dp"
            android:id="@+id/upgrade_bullet"
            tools:ignore="MissingConstraints"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:fontFamily="@font/iceberg_regular"
            android:background="@color/defaultBackgroundColor"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="200dp"
            app:layout_constraintEnd_toStartOf="@+id/upgrade_xscore"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/upgrade_health"/>
    <Button
            android:text="Button"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/price_bullet"
            tools:ignore="MissingConstraints"
            android:fontFamily="@font/iceberg_regular"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/upgrade_bullet"
            app:layout_constraintStart_toStartOf="@+id/upgrade_bullet"
            app:layout_constraintTop_toBottomOf="@+id/level_bullet"/>
    <TextView
            android:text="Score multiplier"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/upgrade_xscore"
            tools:ignore="MissingConstraints"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:fontFamily="@font/iceberg_regular"
            android:background="@color/defaultBackgroundColor"
            android:gravity="center_vertical|center"
            android:layout_marginTop="200dp"
            app:layout_constraintEnd_toEndOf="@+id/ship_image"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="Button"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/price_xscore"
            tools:ignore="MissingConstraints"
            android:fontFamily="@font/iceberg_regular"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/upgrade_xscore"
            app:layout_constraintStart_toStartOf="@+id/upgrade_xscore"
            app:layout_constraintTop_toBottomOf="@+id/level_xscore"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="Button"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/price_health"
            tools:ignore="MissingConstraints"
            android:fontFamily="@font/iceberg_regular"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/level_health"
            app:layout_constraintEnd_toEndOf="@+id/level_health"
            app:layout_constraintStart_toStartOf="@+id/level_health"/>
    <Button
            android:text="300$"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/ship_price"
            tools:ignore="MissingConstraints"
            android:fontFamily="@font/iceberg_regular"
            android:background="@drawable/custom_button_background"
            android:textColor="@color/defaultBackgroundColor"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/ship_image"
            app:layout_constraintTop_toBottomOf="@+id/price_bullet"
            app:layout_constraintEnd_toEndOf="@+id/ship_image"/>
    <ImageView
            android:layout_width="80dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/icon_health"
            android:id="@+id/icon_health"
            android:background="@color/defaultBackgroundColor"
            app:layout_constraintEnd_toEndOf="@+id/upgrade_health"
            app:layout_constraintStart_toStartOf="@+id/upgrade_health"
            app:layout_constraintTop_toBottomOf="@+id/upgrade_health"
            app:layout_constraintHorizontal_bias="0.0"/>

</android.support.constraint.ConstraintLayout>